--- a/Cource/Lesson 7/lesson7.html
+++ b/Cource/Lesson 7/lesson7.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пример Normalize.css</title>   
+    <title>Пример Normalize.css</title>
+    <link rel="stylesheet" href="./normalize.css"> 
+    <link rel="stylesheet" href="./practiceA.css"> 
+    <link rel="stylesheet" href="./practiceB.css"> 
 </head>
 <body>
     <div class="container">
