--- a/Cource/Lesson 10/Homework_lesson10.html
+++ b/Cource/Lesson 10/Homework_lesson10.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototype</title>
-    <link rel="stylesheet" href="./prototype.css">
+    <title>Homework lesson10</title>
+    <link rel="stylesheet" href="./Homework_lesson10.css">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
