Lesson14 practice(correction)

--- a/Cource/Lesson 12/Homework lesson12/index.html
+++ b/Cource/Lesson 12/Homework lesson12/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <div class="TopNav">
-            <button id="b1" aria-label="Кнопка поиска"></button>
+            <button id="b1" aria-label="Поиска"></button>
             <p id="t1">Avion</p>
-            <button id="b2" aria-label="Переход в корзину"></button>
-            <button id="b3" aria-label="Переход в личный кабинет"></button>
+            <button id="b2" aria-label="Корзину"></button>
+            <button id="b3" aria-label="Личный кабинет"></button>
             <button id="divider"></button>
             <div class="main_linies">
                 <p>Plant pots</p>
@@ -39,7 +39,7 @@
                 <p class="text">A new era in eco friendly furniture with Avelon, the French luxury retail brand
                     with nice fonts, tasteful colors and a beautiful way to display things digitally 
                     using modern web technologies.
-                <div class="image" aria-label="Изображение стула"></div>
+                <div class="image" aria-label="Стул"></div>
                 </p>
             </div>
         </div>
@@ -72,22 +72,22 @@
             <p id="text">New ceramics</p>
             <div class="productcards">
                 <div>
-                    <div aria-label="Изображение стула"></div>
+                    <div aria-label="Стул"></div>
                     <p id="text1">The Dandy chair</p>
                     <p id="text2">£250</p>
                 </div>
                 <div>
-                    <div aria-label="Изображение ваз"></div>
+                    <div aria-label="Вазы"></div>
                     <p id="text3">Rustic Vase Set</p>
                     <p id="text4">£155</p>
                 </div>
                 <div>
-                    <div aria-label="Изображение серой вазы"></div>
+                    <div aria-label="Серая ваза"></div>
                     <p id="text5">The Silky Vase</p>
                     <p id="text6">£125</p>
                 </div>
                 <div>
-                    <div aria-label="Изображение лампы"></div>
+                    <div aria-label="Лампа"></div>
                     <p id="text7">The Lucy Lamp</p>
                     <p id="text8">£399</p>
                 </div>
@@ -100,17 +100,17 @@
             <p id="text">Our popular products</p>
             <div class="productcards">
                 <div>
-                    <div aria-label="Изображение дивана"></div>
+                    <div aria-label="Диван"></div>
                     <p id="text1">The Poplar suede sofa</p>
                     <p id="text2">£980</p>
                 </div>
                 <div>
-                    <div aria-label="Изображение стула стула"></div>
+                    <div aria-label="Стул"></div>
                     <p id="text3">The Dandy chair</p>
                     <p id="text4">£250</p>
                 </div>
                 <div>
-                    <div aria-label="Изображение серого стула"></div>
+                    <div aria-label="Серый стул"></div>
                     <p id="text5">The Dandy chair</p>
                     <p id="text6">£250</p>
                 </div>
