Lesson14 homework fix2

--- a/Cource/Lesson 14/index.html
+++ b/Cource/Lesson 14/index.html
@@ -14,18 +14,18 @@
         <div class="TopNav">
             <text id="TopNavText">Avion</text>
             <div class="MainLinks">
-                <text>Plant pots</text>
-                <text>Ceramics</text>
-                <text>Ceramics</text>
-                <text>Chairs</text>
-                <text>Crockery</text>
-                <text>Tableware</text>
-                <text>Cutlery</text>
+                <text aria-label="Plant pots">Plant pots</text>
+                <text aria-label="Ceramics">Ceramics</text>
+                <text aria-label="Tables">Tables</text>
+                <text aria-label="Chairs">Chairs</text>
+                <text aria-label="Crockery">Crockery</text>
+                <text aria-label="Tableware">Tableware</text>
+                <text aria-label="Cutlery">Cutlery</text>
             </div>
             <div class="SideActions">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div aria-label="Поиск"></div>
+                <div aria-label="Корзина"></div>
+                <div aria-label="Профиль"></div>
             </div>
         </div>
     </header>
@@ -33,8 +33,8 @@
     <main>
         <div class="ProductDetails">
             <div class="TopText">
-                <text>The Dandy Chair</text>
-                <text>£250</text>
+                <text aria-label="Стул">The Dandy Chair</text>
+                <text aria-label="Цена 250 фунтов">£250</text>
             </div>
             <div class="Line6"></div>
             <div class="Description">
@@ -45,18 +45,18 @@
                 <text id="DimensionsText">Dimensions</text>
                 <div class="DimensionsMetrics">
                     <div class="Frame38">
-                        <text>Height</text>
-                        <text>110cm</text>
+                        <text aria-label="Высота">Height</text>
+                        <text aria-label="110 сантиметров">110cm</text>
                     </div>
                     <div class="Line4"></div>
                     <div class="Frame39">
-                        <text>Width</text>
-                        <text>75cm</text>
+                        <text aria-label="Ширина">Width</text>
+                        <text aria-label="75 сантиметров">75cm</text>
                     </div>
                     <div class="Line5"></div>
                     <div class="Frame40">
-                        <text>Depth</text>
-                        <text>50cm</text>
+                        <text aria-label="Глубина">Depth</text>
+                        <text aria-label="50 сантиметров">50cm</text>
                     </div>
                 </div>
 
@@ -64,9 +64,9 @@
             <div class="Quantity">
                 <text id="QuantityText">Quantitity</text>
                 <div class="Stepper">
-                    <text>-</text>
+                    <text aria-label="Уменьшить количество штук">-</text>
                     <text>1</text>
-                    <text>+</text>
+                    <text aria-label="Уменшить количество штук">+</text>
                 </div>
 
             </div>
@@ -85,22 +85,22 @@
             <div class="ProductCard1">
                 <div class="image1"></div>
                 <div class="Details">
-                    <text>The Poplar suede sofa</text>
-                    <text>£980</text>
+                    <text aria-label="Диван">The Poplar suede sofa</text>
+                    <text aria-label="Цена 980 фунтов">£980</text>
                 </div>
             </div>
             <div class="ProductCard2">
                 <div class="image2"></div>
                 <div class="Details">
-                    <text>The Dandy chair</text>
-                    <text>£250</text>
+                    <text aria-label="Стул">The Dandy chair</text>
+                    <text aria-label="Цена 250 фунтов">£250</text>
                 </div>
             </div>
             <div class="ProductCard3">
                 <div class="image3"></div>
                 <div class="Details">
-                    <text>The Dandy chair</text>
-                    <text>£250</text>
+                    <text aria-label="Другой стул">The Dandy chair</text>
+                    <text aria-label="Цена 250 фунтов">£250</text>
                 </div>
             </div>
             <div class="button">
